# HardwareAcceleratorFFT

./: .gitignore  Cargo.toml  DevNotes.MD  Embed.toml  memory.x
.cargo/: config.toml
src/: config_hardware.rs  main.rs
