[package]
name = "stm32l476rg_blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.6" 
stm32l4 = { version = "0.15.1", features = ["stm32l4x6"] }
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l476"] }

[profile.release]
opt-level = "s" # Optimize for size
lto = true      # Enable link-time optimization