[package]
name = "stm32l476rg_blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"


stm32l4 = { version = "0.16.0", features = ["stm32l4x6"] }
hal = { package = "stm32-hal2", version = "^2.1.3", features = ["l4x6", "l4rt"] }

[profile.release]
opt-level = "s" # Optimize for size
lto = true      # Enable link-time optimization
