[package]
name = "blinky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"


stm32l4 = { version = "0.16.0", features = ["stm32l4x6"] }
hal = { package = "stm32-hal2", version = "^2.1.3", features = ["l4x6", "l4rt"] }

[profile.release]
opt-level = "s" # Optimize for size
lto = true      # Enable link-time optimization

[package.metadata.cortex-m-rt]
memory-x = "memory.x"